# skillspector-report

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: scorecard.yml  security.yml
src/skillspector_report/: cli.py
