[project]
name = "skillspector-report"
version = "0.1.0"
description = "Generate clean, local PDF reports from NVIDIA SkillSpector scans."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mohammed Bahubaishi" }
]
dependencies = [
  "reportlab>=5.0.0",
  "pillow>=12.0.0"
]

[project.scripts]
skillspector-report = "skillspector_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
